--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -12,8 +12,8 @@
 #mainNav .navbar-toggler {
   font-size: 80%;
   padding: 0.75rem;
-  color: #64a19d;
-  border: 1px solid #64a19d;
+  color: red;
+  border: 1px solid red;
 }
 
 #mainNav .navbar-toggler:focus {
@@ -74,7 +74,7 @@
     border-bottom: 0.25rem solid transparent;
   }
   #mainNav.navbar-shrink .nav-link:hover {
-    color: #64a19d;
+    color: red;
   }
   #mainNav.navbar-shrink .nav-link:active {
     color: #467370;
@@ -150,20 +150,20 @@
 }
 
 .btn-primary {
-  background-color: #64a19d;
+  background-color: rgb(255, 27, 27);
 }
 
 .btn-primary:hover {
-  background-color: #4f837f;
+  background-color: rgb(253, 90, 90);
 }
 
 .btn-primary:focus {
-  background-color: #4f837f;
+  background-color: rgb(185, 0, 0);
   color: white;
 }
 
 .btn-primary:active {
-  background-color: #467370 !important;
+  background-color: rgb(167, 0, 0) !important;
 }
 
 .about-section {
@@ -187,7 +187,7 @@
 @media (min-width: 992px) {
   .projects-section .featured-text {
     padding: 0 0 0 2rem;
-    border-left: 0.5rem solid #64a19d;
+    border-left: 0.5rem solid red;
   }
 }
 
@@ -201,7 +201,7 @@
     padding: 5rem;
   }
   .projects-section .project-text hr {
-    border-color: #64a19d;
+    border-color: red;
     border-width: .25rem;
     width: 30%;
   }
@@ -235,7 +235,7 @@
 
 .contact-section .card {
   border: 0;
-  border-bottom: 0.25rem solid #64a19d;
+  border-bottom: 0.25rem solid red;
 }
 
 .contact-section .card h4 {
@@ -246,7 +246,7 @@
 }
 
 .contact-section .card hr {
-  border-color: #64a19d;
+  border-color: red;
   border-width: 0.25rem;
   width: 3rem;
 }
@@ -279,12 +279,12 @@ body {
 }
 
 a {
-  color: #64a19d;
+  color: red;
 }
 
 a:focus, a:hover {
   text-decoration: none;
-  color: #3c6360;
+  color: darkred;
 }
 
 .bg-black {
@@ -292,13 +292,20 @@ a:focus, a:hover {
 }
 
 .bg-primary {
-  background-color: #64a19d !important;
+  background-color: red !important;
 }
 
 .text-primary {
-  color: #64a19d !important;
+  color: red !important;
 }
 
 footer {
   padding: 5rem 0;
+}
+
+/* new color for icon languages */
+
+.icon-red {
+  color: red;
+  opacity:.4;
 }
