--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -319,3 +319,8 @@ footer {
   filter: grayscale(0%);
   transition: filter 1s;
 }
+
+/* project groups */
+#project-group {
+  margin-top: 15rem
+}
