--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -77,7 +77,7 @@
     color: red;
   }
   #mainNav.navbar-shrink .nav-link:active {
-    color: #467370;
+    color:darkred;
   }
   #mainNav.navbar-shrink .nav-link.active {
     color: red;
